--- a/.config/kitty/colors.conf
+++ b/.config/kitty/colors.conf
@@ -9,21 +9,21 @@ inactive_tab_background   #00080D
 
 active_border_color   #F6D5D9
 inactive_border_color #00080D
-bell_border_color     #0F1C24
+bell_border_color     #012133
 
 color0          #00080D
-color1          #0F1C24
-color2		    #182C39
-color3		    #1F3547
-color4		    #4B3781
-color5		    #903E92
-color6		    #B95A66
+color1          #012133
+color2		    #07304B
+color3		    #0B395B
+color4		    #544B6D
+color5		    #775778
+color6		    #AC666E
 color7		    #EABBC0
 color8		    #A38286
-color9		    #152732
-color10		    #223C4F
-color11		    #294960
-color12		    #6449AB
-color13		    #B45AB9
-color14		    #D49BA1
+color9		    #022D44
+color10		    #0A4064
+color11		    #0F4D7A
+color12		    #716592
+color13		    #9F74A1
+color14		    #E68993
 color15		    #EABBC0
