--- a/.gitconfig
+++ b/.gitconfig
@@ -1,5 +1,6 @@
 [http]
 	postBuffer = 157286400
+	version = HTTP/1.1
 [credential "https://github.com"]
 	helper = 
 	helper = !/usr/bin/gh auth git-credential
