Add fzf-git.sh file

--- a/.config/kitty/colors.conf
+++ b/.config/kitty/colors.conf
@@ -1,29 +1,29 @@
-foreground         #F6D5D9
-background         #00080D
-cursor             #F6D5D9
+foreground         #F9EDFC
+background         #010209
+cursor             #F9EDFC
 
-active_tab_foreground     #00080D
-active_tab_background     #F6D5D9
-inactive_tab_foreground   #F6D5D9
-inactive_tab_background   #00080D
+active_tab_foreground     #010209
+active_tab_background     #F9EDFC
+inactive_tab_foreground   #F9EDFC
+inactive_tab_background   #010209
 
-active_border_color   #F6D5D9
-inactive_border_color #00080D
-bell_border_color     #012133
+active_border_color   #F9EDFC
+inactive_border_color #010209
+bell_border_color     #09163F
 
-color0          #00080D
-color1          #012133
-color2		    #07304B
-color3		    #0B395B
-color4		    #544B6D
-color5		    #775778
-color6		    #AC666E
-color7		    #EABBC0
-color8		    #A38286
-color9		    #022D44
-color10		    #0A4064
-color11		    #0F4D7A
-color12		    #716592
-color13		    #9F74A1
-color14		    #E68993
-color15		    #EABBC0
+color0          #010209
+color1          #09163F
+color2		    #0F2763
+color3		    #343772
+color4		    #5E4C86
+color5		    #A55E97
+color6		    #B39ABA
+color7		    #EEDEF3
+color8		    #A69BAA
+color9		    #0D1E55
+color10		    #143584
+color11		    #464A98
+color12		    #7E66B3
+color13		    #DC7ECA
+color14		    #EFCEF9
+color15		    #EEDEF3
