--- a/.config/kitty/colors.conf
+++ b/.config/kitty/colors.conf
@@ -1,29 +1,30 @@
-foreground         #F9EDFC
-background         #010209
-cursor             #F9EDFC
+foreground         #FEC6AC
+background         #010006
 
-active_tab_foreground     #010209
-active_tab_background     #F9EDFC
-inactive_tab_foreground   #F9EDFC
-inactive_tab_background   #010209
+url_color #622429
 
-active_border_color   #F9EDFC
-inactive_border_color #010209
-bell_border_color     #09163F
+active_tab_foreground     #010006
+active_tab_background     #FEC6AC
+inactive_tab_foreground   #FEC6AC
+inactive_tab_background   #010006
 
-color0          #010209
-color1          #09163F
-color2		    #0F2763
-color3		    #343772
-color4		    #5E4C86
-color5		    #A55E97
-color6		    #B39ABA
-color7		    #EEDEF3
-color8		    #A69BAA
-color9		    #0D1E55
-color10		    #143584
-color11		    #464A98
-color12		    #7E66B3
-color13		    #DC7ECA
-color14		    #EFCEF9
-color15		    #EEDEF3
+active_border_color   #FEC6AC
+inactive_border_color #010006
+bell_border_color     #54424C
+
+color0          #010006
+color1          #622A34
+color2          #622429
+color3          #52404A
+color4          #8F2224
+color5          #735354
+color6          #BD450E
+color7          #F5A580
+color8          #AC745A
+color9          #833844
+color10         #833037
+color11         #6E5663
+color12         #BF2D30
+color13         #996E70
+color14         #FC5C13
+color15         #F5A580
