--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,23 +1,35 @@
 ######## FONT #########
-font_family          JetBrainsMono Nerd Font
-bold_font            JetBrainsMono Nerd Font
-bold_italic_font     JetBrainsMono Nerd Font BoldItalic
-font_size            13
-modify_font          strikethrough_position 120%
-modify_font          strikethrough_thickness 2
-modify_font          underline_position +3
+font_family          Iosevka Nerd Font 
+bold_font            Iosevka Nerd Font 
+bold_italic_font     Iosevka Nerd Font
+font_size            15
+modify_font          strikethrough_position 100%
+modify_font          strikethrough_thickness 0
+modify_font          underline_position +5
 modify_font          underline_thickness 1px
 modify_font          cell_height 115%
 undercurl_style      thin-dense
 
 ######## THEME #########
 include colors.conf
+cursor none
+cursor_text_color background
+cursor_trail 1
+cursor_trail_decay 0.1 0.3
+cursor_trail_start_threshold 1
+cursor_blink_interval 0.4 ease-in-out
 hide_window_decorations yes
-background_opacity 0.85
+background_opacity 0.80
 background_blur 30
 
 # Keymaps
+
+map ctrl+equal change_font_size all +1.0
+map ctrl+minus change_font_size all -1.0
 map ctrl+, load_config_file
 # for opening links with Ctrl+click
 mouse_map left click ungrabbed mouse_handle_click prompt
 mouse_map ctrl+left click ungrabbed mouse_handle_click link
+
+# WINDOW
+window_margin_width 4
