--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,13 +1,13 @@
 ######## FONT #########
-font_family          Iosevka Nerd Font 
-bold_font            Iosevka Nerd Font 
-bold_italic_font     Iosevka Nerd Font
-font_size            15
+font_family          JetBrainsMono Nerd Font 
+bold_font            JetBrainsMono Nerd Font 
+bold_italic_font     JetBrainsMono Nerd Font
+font_size            13
 modify_font          strikethrough_position 100%
 modify_font          strikethrough_thickness 0
 modify_font          underline_position +5
 modify_font          underline_thickness 1px
-modify_font          cell_height 115%
+modify_font          cell_height 125%
 undercurl_style      thin-dense
 
 ######## THEME #########
